--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -12,7 +12,7 @@
 
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body>
+  <body style='background: #2b2f33;'>
 
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
