--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -10,12 +10,12 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Llama Farm</title>
   </head>
   <body style='background: #2b2f33;'>
 
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Llama Farm doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
 
     <div id='app'></div>
